# baresip-account-switcher

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
.cargo/: config
src/: config.rs  lib.rs  use_accounts.rs
src/baresip/: account.rs  command.rs  config.rs  ffi.rs  mod.rs  mod_export.rs  string.rs  user_agent.rs
