[package]
name = "baresip-account-switcher"
version = "0.1.1"
edition = "2021"

[lib]
name = "account_switcher"
crate_type = ["dylib"]

[dependencies]
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[profile.release.package."*"]
opt-level = 3
